--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-icons": "^3.7.0",
     "styled-components": "^4.3.2"
   }
