--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-emoji-render": "^1.0.0",
     "react-icons": "^3.7.0",
     "styled-components": "^4.3.2"
   }
