--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "webpack-dev-server --progress --colors --inline --hot",
     "production": "webpack --progress -p --define process.env.NODE_ENV='\"production\"'"
   },
@@ -32,7 +33,7 @@
     "react-iframe": "^1.5.0",
     "react-redux": "4.4.6",
     "react-redux-toastr": "4.4.2",
-    "react-router": "3.0.2",
+    "react-router-dom": "^5.0.1",
     "redux": "3.6.0",
     "redux-multi": "0.1.12",
     "redux-promise": "0.5.3",
@@ -43,10 +44,13 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "http-server": "0.10.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-emoji-render": "^1.0.0",
     "react-icons": "^3.7.0",
+    "react-scrollable-anchor": "^0.6.1",
     "styled-components": "^4.3.2"
   }
 }
